--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Calculator">
+        <activity android:name=".Intent2">
+
+        </activity>
+        <activity android:name=".Intent1" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Listener">
 
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Calculator">
+
+        </activity>
+        <activity android:name=".Listener" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
