Android_practice and Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Intent2">
-
-        </activity>
-        <activity android:name=".Intent1" >
-
+        <activity android:name=".OpenInternet">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Calculator">
 
-        </activity>
+        <activity android:name=".Intent2"></activity>
+        <activity android:name=".Intent1"></activity>
+        <activity android:name=".Calculator"></activity>
         <activity android:name=".Listener" />
         <activity android:name=".MainActivity" />
     </application>
