--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".OpenInternet">
+        <activity android:name=".FragmentActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <activity android:name=".Intent2"></activity>
-        <activity android:name=".Intent1"></activity>
-        <activity android:name=".Calculator"></activity>
+        </activity>
+        <activity android:name=".OpenInternet">
+
+        </activity>
+        <activity android:name=".Intent2" />
+        <activity android:name=".Intent1" />
+        <activity android:name=".Calculator" />
         <activity android:name=".Listener" />
         <activity android:name=".MainActivity" />
     </application>
