--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".FragmentActivity">
 
+        <activity android:name=".NullSafety">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".OpenInternet">
 
-        </activity>
+        <activity android:name=".FragmentActivity"></activity>
+        <activity android:name=".OpenInternet"></activity>
         <activity android:name=".Intent2" />
         <activity android:name=".Intent1" />
         <activity android:name=".Calculator" />
