--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-
-        <activity android:name=".NullSafety">
+        android:theme="@style/MyTheme">
+        <activity android:name=".Context">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".FragmentActivity"></activity>
-        <activity android:name=".OpenInternet"></activity>
+        <activity android:name=".Resource"></activity>
+        <activity android:name=".NullSafety" />
+        <activity android:name=".FragmentActivity" />
+        <activity android:name=".OpenInternet" />
         <activity android:name=".Intent2" />
         <activity android:name=".Intent1" />
         <activity android:name=".Calculator" />
