--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="re.sta.rt">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyTheme">
-
-        <activity android:name=".Context">
+        android:theme="@style/MyTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".PhoneBookDetailActivity"></activity>
+        <activity android:name=".PhoneBookActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-        <activity android:name=".Resource"></activity>
+        <activity android:name=".AddViewActivity" />
+        <activity android:name=".Library" />
+        <activity android:name=".Thread" />
+        <activity android:name=".Context" />
+        <activity android:name=".Resource" />
         <activity android:name=".NullSafety" />
         <activity android:name=".FragmentActivity" />
         <activity android:name=".OpenInternet" />
@@ -29,7 +33,6 @@
         <activity android:name=".Calculator" />
         <activity android:name=".Listener" />
         <activity android:name=".MainActivity" />
-
     </application>
 
 </manifest>
