--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 }
 allprojects {
     repositories {
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
         google()
         jcenter()
     }
