--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -30,6 +34,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+}
+
+realm {
+    syncEnabled = true
 }
 
 dependencies {
