--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,5 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
-
+    implementation 'com.orhanobut:logger:2.2.0'
 }
