--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,26 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".MasterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MasterApplication"
         android:theme="@style/MyTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".OutStargramMyPostListActivity"></activity>
+        <activity android:name=".OutstagramUserInfo" />
+        <activity android:name=".OutStagramPostListActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".EmailSignupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PermisstionActivity"></activity>
+        <activity android:name=".PermisstionActivity" />
         <activity android:name=".RetrofitActivity" />
         <activity android:name=".NetworkActivity" />
         <activity android:name=".AsyncActivity" />
