--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -12,25 +12,24 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/MyTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".OutStagramMyPostListActivity"></activity>
-        <activity android:name=".OutStagramUploadActivity" />
-        <activity android:name=".OutStargramMyPostListActivity" />
-        <activity android:name=".OutstagramUserInfo" />
-        <activity android:name=".OutStagramPostListActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".EmailSignupActivity">
+        <activity android:name=".MyTubeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".OutStagramMyPostListActivity" />
+        <activity android:name=".OutStagramUploadActivity" />
+        <activity android:name=".OutstagramUserInfo" />
+        <activity android:name=".OutStagramPostListActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".EmailSignupActivity"></activity>
         <activity android:name=".PermisstionActivity" />
         <activity android:name=".RetrofitActivity" />
         <activity android:name=".NetworkActivity" />
